Fix invisible button background on Safari

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -21,4 +21,8 @@
 
         background-color: var(--bgColor);
     }
+
+    button {
+        background-color: rgb(239, 239, 239);
+    }
 }
